Fixed bug where overlapping bookings were permitted

--- a/frontend/src/components/BookingPage/index.css
+++ b/frontend/src/components/BookingPage/index.css
@@ -111,6 +111,15 @@
 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.05);
 }
 
+.reservation-details-container {
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+	padding-left: 10px;
+	padding-right: 10px;
+	box-sizing: border-box;
+}
+
 .reservation-details {
 	display: flex;
 	justify-content: space-between;
@@ -126,7 +135,9 @@
 
 .booking-action-cancel,
 .booking-action-edit {
+	box-sizing: border-box;
 	padding: 10px;
+	width: 100%;
 	cursor: pointer;
 }
 
